--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-body {
+/*web sit font load*/
+@font-face {
+  font-family: Om_Botak;
+  src: url("./ressources/font/OmBotak.ttf");
+}
+
+html, body, #root {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Om_Botak;
 }
 
 code {
