Bon, y a plein de truc
Alors:
- j'ai corriger la font qui avait certain caractère trop petit
- J'ai ajouter le system pour charger des levels
- J'ai ajouter le system pour charger de la theori
- J'ai ajouter un system de saivgarde plus peformant
- J'ai corriger plein de truc sur le Level page, comme l'affichage du "/" et du "/g" pour mieux indiquer que c'est une regex, ainsi que plein d'effet visuelle pour rendre plus agréable l'utilisation du level
- j'ai changer "LevelAnswer" -> "LevelString"

- j'ai update le reademe pour indiquer commen on crée un level

et je croie que c'est tous

--- a/src/compenent/RegexSlideWord/index.css
+++ b/src/compenent/RegexSlideWord/index.css
@@ -7,6 +7,7 @@
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    margin: 20px;
 }
 
     .RegexSlideWord .inSlider{
@@ -44,7 +45,7 @@
 
     .RegexSlideWord .word{
         --actualPos:50%;
-        --wordMoveDuration:0.25s;
+        --wordMoveDuration:0.20s;
 
         position: absolute;
         top:50%;
@@ -53,8 +54,6 @@
         text-align: center;
         z-index: 2;
         transition: left var(--wordMoveDuration);
-        font-size: 27px;
-        width: 90px;
     }
 
         .RegexSlideWord .valide{
