--- a/src/gamePage/LevelPage/index.css
+++ b/src/gamePage/LevelPage/index.css
@@ -48,7 +48,7 @@
         margin-top: 15px;
         border-style: solid;
         border-color: var(--color-prime1);
-        background-color: #ffffff;
+        background-color: var(--color-background2);
         border-width: 5px;
 
         cursor: text;
@@ -63,11 +63,6 @@
         .LevelPage .inputHolder .embedValue{
             font-size: var(--fontSize);
             opacity: 0.5;
-
-            /*empèche la selection*/
-            -webkit-user-select: none; /* Safari */
-            -ms-user-select: none; /* IE 10 and IE 11 */
-            user-select: none; /* Standard syntax */
         }
 
         .LevelPage .inputHolder input{
@@ -143,46 +138,104 @@
 
     .LevelPage .LevelFinishMessage{
         position: absolute;
-        top: 0;
+        top: 5%;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 30%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 200px;
-        background-color: var(--color-background);
-        animation: 1s LevelClear_anim ease-in-out;
-
-        /*empèche la selection*/
-        -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
-        user-select: none; /* Standard syntax */
+        font-size: 150px;
+        animation: 0.5s LevelClearSpawn_anim ease-in-out;
         z-index: 2;
-        opacity: 0;
+    }
+    
+        @keyframes LevelClearSpawn_anim {
+            0%{
+                transform: scale(0.75,1.25);
+                top:-50%;
+            }
+            25%{
+                top:5%; transform: scale(0.75,1.25);
+            }
+            26%{
+                transform: scale(1.2) rotate(-10deg);
+            }
+            50%{
+                transform: scale(1) rotate(5deg);
+            }
+            75%{
+                transform: scale(1) rotate(-2.5deg);
+            }
+            100%{
+                transform: scale(1);
+            }
+        }
+
+
+    .LevelPage .LevelFinishMessage h1{
+        font-size: 100%;
+        animation: 5s LevelClearIdle_anim cubic-bezier(0.3, 0.7, 1, 0.3) infinite;
     }
 
     
-    @keyframes LevelClear_anim {
+    @keyframes LevelClearIdle_anim {
         0%{
-            transform: scale(0.5) rotate(15deg);
-            opacity: 1;
+            transform: scale(1);
         }
         12.5%{
-            transform: scale(1.2) rotate(-10deg);
+            transform: scale(1.05) rotate(1deg);
         }
         25%{
-            transform: scale(1) rotate(5deg);
+            transform: scale(1.1) rotate(-2deg);
         }
         37.5%{
-            transform: scale(1) rotate(-2.5deg);
+            transform: scale(1.05) rotate(1deg);
         }
         50%{
             transform: scale(1);
-            opacity: 1;
+        }
+        62.5%{
+            transform: scale(1.05) rotate(-1deg);
+        }
+        75%{
+            transform: scale(1.1) rotate(2deg);
+        }
+        87.5%{
+            transform: scale(1.05) rotate(-1deg);
         }
         100%{
-            opacity: 0;
+            transform: scale(1);
         }
+
+    }
+
+
+    .LevelPage .NextLevelNotif{
+        position: absolute;
+        bottom: 20%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        animation: 0.25s NextLevelNotifSpawn_anim ease-in-out;;
+    }
+
+    
+        @keyframes NextLevelNotifSpawn_anim {
+            0%{
+                transform: scale(0);
+            }
+            50%{
+                transform: scale(1.2);
+            }
+            100%{
+                transform: scale(1);
+            }
+    
+        }
+
+    .LevelPage .NextLevelNotif h1{
+        font-size: 30px;
+        animation: 3s infinite Floating_anim ease-in-out;
     }
