--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+:root{
+  --color-background : #FEFBEA;
+  --color-background2 : #FEFBEA;
+  --color-prime1 : #3b221b;
+  --color-prime2: rgb(173, 29, 29);
+  --color-false-lighted: #FF4B81;
+  --color-right-lighted: #4CFEB1;
+  --color-false-unlighted: #8f475c;
+  --color-right-unlighted: #4a8d70;
+  --color-false-background: #62222F;
+  --color-right-background:#143A0E;
+}
+
+
 /*web sit font load*/
 @font-face {
   font-family: Om_Botak;
@@ -9,9 +23,24 @@ html, body, #root {
   margin: 0;
   padding: 0;
   font-family: Om_Botak;
+  color: var(--color-prime2);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/*permette a du text ou image de ne pas être selectionable*/
+.NoSelect{
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+/*tous ce qui continer un svg*/
+.SvgContainer{
+  -webkit-mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
