--- a/src/compenent/CustomButton/index.css
+++ b/src/compenent/CustomButton/index.css
@@ -4,26 +4,20 @@
     background: none;
     border-style: none;
     margin:10px;
-    animation: 3s infinite Floating_anim cubic-bezier(0.3, 0.7, 1, 0.3);
+    animation: 3s infinite Floating_anim ease-in-out;
     color: var(--color-prime2);
     transform: scale(1);
     transition: tranform 1s;
     }
     @keyframes Floating_anim {
         0%{
-            transform: translate(0,0) rotate(-2deg) scale(0.975, 1.025);
-        }
-        25%{
-            transform: translate(0,-10%) rotate(0);
+            transform: scale(0.975, 1.025);
         }
         50%{
-            transform: translate(0,0) rotate(2deg) scale(1.025, 0.975);
-        }
-        75%{
-            transform: translate(0,-10%) rotate(0);
+            transform: scale(1.025, 0.975);
         }
         100%{
-            transform: translate(0,0) rotate(-2deg) scale(0.975, 1.025);
+            transform: scale(0.975, 1.025);
         }
     }
 
@@ -53,7 +47,7 @@
 
 .CustomButton:enabled:hover::after {
     position: absolute;
-    bottom: -5px;
+    bottom: -10px;
     left: 0;
     content: '';
     display: inline-block;
