--- a/src/gameContainer/index.css
+++ b/src/gameContainer/index.css
@@ -16,16 +16,16 @@
 
 #gamePageContainer{
   background-color: var(--color-background);
-  position: absolute;
-  top:0;
-  left: 0;
   padding: 0;
   margin:0;
   width: 100%;
   height: 100%;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
-  overflow: hidden;
+  overflow-x: hidden;
+}
+#gamePageContainer::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .GamePageContainer{
@@ -33,9 +33,6 @@
   margin:0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .GamePage{
@@ -43,12 +40,9 @@
   margin:0;
   width: 100%;
   height: 100%;
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 0;
-  left: 0;
 }
 
 /*transion être les page (animation)*/
@@ -98,7 +92,8 @@
 
 
 .PageTitle{
-  font-size: 100px;
+  margin-top: auto;
+  font-size: 6vw;
   animation: 5s infinite upAndDown;
 }
   
