--- a/src/gamePage/MainMenu/index.css
+++ b/src/gamePage/MainMenu/index.css
@@ -7,7 +7,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        width: 40%;
+        width: 60%;
         margin-top: 50px;
     }
 
@@ -28,13 +28,16 @@
 
         .MainMenu .Menu .PlayBnt{
             justify-content: center;
+            margin-bottom: 30px;
         }
     
     
     .MainMenu .LogoContainer{
-        min-height: 30%;
-        background-color: aqua;
-        min-width: 30%;
+        min-height: 50%;
+        min-width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
 
