--- a/src/gamePage/Settings/index.css
+++ b/src/gamePage/Settings/index.css
@@ -3,7 +3,7 @@
 }
 
     .Settings .ProgressionTab{
-        width: 30%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -11,7 +11,7 @@
 
         .Settings .ProgressionTab .PaletteShowerContainer{
             display: flex;
-            margin-bottom: 100px;
+            margin-bottom: 50px;
             flex-wrap: wrap;
             justify-content: space-around;
         }
@@ -20,6 +20,9 @@
         background-color: #ff0055;
         border-radius: 10px;
         padding: 40px;
+        min-width: 40%;
+        display: flex;
+        justify-content: center;
         border: solid #51001b 10px;
     }
 
