--- a/src/gamePage/TheoriePage/index.css
+++ b/src/gamePage/TheoriePage/index.css
@@ -16,14 +16,14 @@
     }
     .TheoriePage p{
         font-size: 23px;
-        width: 30%;
+        width: 40%;
         text-align: center;
         margin: 0;
     }
 
     .TheoriePage .Exemple{
         width: 40%;
-        min-height: 40%;
+        height: 40%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -31,10 +31,15 @@
 
     
     .TheoriePage .Exemple>div{
-        min-width: 100%;
+        width: 100%;
         min-height: 100%;
-        background-color: aqua;
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
+    }
+
+    .TheoriePage .Exemple>div>img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
