--- a/src/gamePage/Transition/index.css
+++ b/src/gamePage/Transition/index.css
@@ -1,4 +1,4 @@
-.GameLevelTrasition{
+.GameTransition{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,7 @@
 }
 
 
-    .GameLevelTrasition h1{
+    .GameTransition h1{
         font-size: 120px;
         margin: 0;
     }
