--- a/src/compenent/RegexSlideWord/index.css
+++ b/src/compenent/RegexSlideWord/index.css
@@ -50,6 +50,8 @@
         z-index: 2;
         transition: left var(--wordMoveDuration);
         text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.5);
+
+        white-space: nowrap;
     }
 
     .RegexSlideWord .word::before{
