--- a/src/gamePage/LevelSelectPage/index.css
+++ b/src/gamePage/LevelSelectPage/index.css
@@ -4,15 +4,87 @@
     justify-content: center;
     align-items: center;
 }
+    .LevelSelectPage .LevelSelectContainer{
+        display: flex;
+        width: 100%;
+        height: 60%;
+    }
+
+        /*Bnt de navigation*/
+        .LevelSelectPage .LevelSelectContainer .NavBnt{
+            margin: 3vw;
+            width: 70px;
+            height: 70px;
+            align-self: center;
+            border: none;
+            transform: scale(1);
+            transition: transform 0.15s;
+            background-color: transparent;
+        }
+            .LevelSelectPage .LevelSelectContainer .NavBnt .Icon{
+                width: 100%;
+                height: 100%;
+                background-color: var(--color-prime2);
+                -webkit-mask-image: url("../../ressources/image/SVG/NavBnt.svg");
+            }
+
+
+            .LevelSelectPage .LevelSelectContainer .NavBnt:enabled:hover{
+                transform: scale(1.3);
+                cursor: pointer;
+            }
+
+            .LevelSelectPage .LevelSelectContainer .NavBnt:disabled{
+                opacity: 0.5;
+                transform: scale(1);
+            }
+
+            .LevelSelectPage .LevelSelectContainer .NavBnt_Click{
+                animation: 0.15s NavBnt_Click_anim ease-in-out;
+            }
+
+            @keyframes NavBnt_Click_anim {
+                0%{
+                    transform: scale(1.3);
+                }
+                50%{
+                    transform: scale(2)
+                }
+                100%{
+                    transform: scale(1.3);
+                }
+            }
+
+
+        .LevelSelectPage .LevelSelectContainer .GoBack .Icon{
+            transform: scaleX(-1);
+        }
+
+
+
+
+
 
     .LevelSelectPage .LevelSelectBntContainer{
         width: 70%;
-        height: 60%;
+        height: 100%;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
         align-items: center;
     }
+
+    .LevelSelectPage .LevelPageChange{
+        animation: 0.25s pop ease-in-out;
+    }
+
+        .LevelSelectPage .LevelSelectBntContainer .LevelSelectBnt_Empty{
+            --size:calc((100% / 5) - 60px);
+
+            min-width: max(70px,var(--size));
+            min-height: 10px;
+            background-color: aqua;
+        }
 
         .LevelSelectPage .LevelSelectBntContainer .LevelSelectBnt{
             --size:calc((100% / 5) - 60px);
