--- a/src/gamePage/MainMenu/index.css
+++ b/src/gamePage/MainMenu/index.css
@@ -29,6 +29,7 @@
         .MainMenu .Menu .PlayBnt{
             justify-content: center;
             margin-bottom: 30px;
+            position: relative;
         }
     
     
@@ -38,6 +39,103 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .MainMenu .PaletteShowerBnt{
+        height: 4vw;
+        width: 4vw;
+        background-color: var(--color-prime2);
+        -webkit-mask-image: url("../../ressources/image/SVG/palette.svg");
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        cursor: pointer;
+        transform: scale(1);
+        transition: 0.15s transform;
+    }
+        .MainMenu .PaletteShowerBnt:hover{
+            transform: scale(1.2);
+        }
+
+
+/* pal selector*/
+    .MainMenu .PalSelectorContainer{
+        position: absolute;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        top:-100%;
+        left: 0;
+        z-index: 3;
+        background-color: var(--color-background);
+        border-bottom:solid var(--color-prime2) 5px;
+    }
+        .MainMenu .PalSelectorContainer>div{
+            width: 50%;
+        }
+
+        .MainMenu .PalSelectorContainer .CloseBnt{
+            width: 35px;
+            height: 35px;
+            margin: 10px;
+            transform: scale(1) rotate(-90deg);
+            transition: 0.15s transform;
+            cursor: pointer;
+            z-index: -1;
+            background-color: var(--color-prime2);
+            -webkit-mask-image: url("../../ressources/image/SVG/NavBnt.svg");
+            border: none;
+        }
+        .MainMenu .PalSelectorContainer .CloseBnt:hover{
+            transform: scale(1.2) rotate(-90deg);
+        }
+
+    .MainMenu .PalSelectorContainer_hide{
+        top:-100%;
+        animation: 0.25s PalSelectorContainer_hide_anim;
+    }
+
+    .MainMenu .PalSelectorContainer_show{
+        top:0%;
+        animation: 0.25s PalSelectorContainer_show_anim;
+    }
+
+    @keyframes PalSelectorContainer_show_anim {
+        0%{
+            transform: scale(1,1.2);
+            top:-20%;
+        }
+        25%{
+            transform: scale(1,1.2);
+            top:0%;
+        }
+        50%{
+            transform: scale(1.3,1);
+            top:0%;
+        }
+        100%{
+            transform: scale(1);
+        }
+    }
+
+    @keyframes PalSelectorContainer_hide_anim {
+        0%{
+            transform: scale(1,1);
+            top:0%;
+        }
+        50%{
+            transform: scale(1.3,1);
+            top:0%;
+        }
+        75%{
+            transform: scale(1,1.2);
+            top:-1%;
+        }
+        100%{
+            transform: scale(1,1.2);
+            top:-20%;
+        }
     }
 
 
