Quelque petit changement
- ajout du faveIcon et des icone 192px et 512px
- correction de bug sur chromes :
       - cacher correctement la scrolle bar
       - correction d'un bug qui fesait les cookie s'ajoutait pas sur chrome

- ajout de quelque palette de couleur
- correction de certaint niveau après un play tester avec des potes moi
- correction de quelque image tuto pour les rendre plus compéensible

--- a/src/compenent/paletteSelector/index.css
+++ b/src/compenent/paletteSelector/index.css
@@ -3,7 +3,7 @@
     margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
 }
 
