--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ html, body, #root {
   overflow-x: hidden;
 }
 
+#root::-webkit-scrollbar {
+  display: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
